[gd_scene load_steps=6 format=3 uid="uid://26xdigjj3lvv"]

[ext_resource type="Script" path="res://demo/usageDemo.gd" id="1_b7eub"]
[ext_resource type="PackedScene" uid="uid://e88f751xj6hs" path="res://tools/debug/debugmeter2d/DebugMeter2D.tscn" id="1_gwqr4"]
[ext_resource type="PackedScene" uid="uid://bo7xnx4vak3gw" path="res://tools/debug/debugstatelabel2d/DebugStateLabel2D.tscn" id="2_mmtn2"]
[ext_resource type="AudioStream" uid="uid://54bvexpkrxhg" path="res://demo/bong_001.wav" id="4_eyw0t"]
[ext_resource type="AudioStream" uid="uid://d0bo4m2rxrdxk" path="res://demo/drop_003.wav" id="5_3q2o5"]

[node name="demo" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_b7eub")

[node name="SubzeroDebugMeter" parent="." instance=ExtResource("1_gwqr4")]
layout_mode = 1
anchors_preset = -1
anchor_top = 1.0
anchor_right = 0.0
offset_left = 44.0
offset_top = -587.0
offset_right = 156.0
offset_bottom = -58.0
max_value = 10.0
min_value = -5.0
initial_value = 0.0
relative_position_of_baseline = 76.689
change_bar_color_below_baseline = true

[node name="SymmetricDebugMeter" parent="." instance=ExtResource("1_gwqr4")]
layout_mode = 1
anchors_preset = -1
anchor_top = 1.0
anchor_right = 0.0
offset_left = 200.0
offset_top = -587.0
offset_right = 312.0
offset_bottom = -58.0
min_value = -100.0
initial_value = 0.0
relative_position_of_baseline = 64.856
change_bar_color_below_baseline = true

[node name="ZeroLabel" parent="." instance=ExtResource("2_mmtn2")]
layout_mode = 1
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -210.0
offset_top = 178.0
offset_right = -210.0
offset_bottom = 178.0
grow_horizontal = 0
_caption = "Zero"

[node name="PeakedLabel" parent="." instance=ExtResource("2_mmtn2")]
layout_mode = 1
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -211.0
offset_top = 121.0
offset_right = -211.0
offset_bottom = 121.0
grow_horizontal = 0
_caption = "Peaked"

[node name="ZeroHighlighted" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("4_eyw0t")

[node name="MeterPeaked" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("5_3q2o5")

[connection signal="finished" from="ZeroHighlighted" to="." method="_on_zero_highlighted_finished"]
[connection signal="finished" from="MeterPeaked" to="." method="_on_meter_peaked_finished"]
